Fixed gap between buttons

--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@
 
 .buttons {
   display: grid;
-  grid-template-rows: 25% 25% 25% 25%;
+  grid-template-rows: 20% 20% 20% 20% 20%;
+  min-height: 500px;
 }
 
 .button-1,
@@ -24,10 +25,9 @@
 {
   display: grid;
   grid-template-columns: 25% 25% 25% 25%;
-  border: solid black 1px;
 }
 
 button {
   width: 100%;
-  height: 100px;
+  height: 100%;
 }
